fix stretching of logo for small devices

--- a/public/stylesheets/home.css
+++ b/public/stylesheets/home.css
@@ -105,6 +105,6 @@
 @media(max-width: 519px) {
     #content_header img {
         width: 300px;
-        height: 141px;
+        height: 175px;
     }
 }
